<resources>
    <string name="app_name">Meme Roller</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="label_undo">Undo</string>
    <string name="label_redo">Redo</string>
    <string name="label_save" translatable="false">Save</string>
    <string name="pic_label">Picture Label</string>
    <string name="all_tab">All</string>
    <string name="celebrity_tab">Celebrity</string>
    <string name="pets_tab">Animals</string>
    <string name="political_tab">Political</string>
    <string name="cartoon_tab">Cartoon</string>
    <string name="urban_tab">Urban</string>
    <string name="saved_tab">Saved</string>
    <string name="label_done">Done</string>
    <string name="label_rotation">Rotation</string>
    <string name="label_opacity">Opacity</string>
    <string name="label_close">Close</string>
    <string name="label_mic">Mic</string>
    <string name="label_send_to">Send</string>
    <string name="label_camera">Camera</string>
    <string name="label_gallery">Image Gallery</string>
    <string name="exit_app">Exit</string>
    <string name="action_credits">Credits</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="label_share">Share</string>





</resources>
