<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_color_picker"
        app:expanded="false">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tool_bar_height"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/hamburger"
            app:title="@string/app_name"
            app:titleTextColor="@color/white">


        </androidx.appcompat.widget.Toolbar>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorHeight="5dp"
            app:tabMode="scrollable"
            app:tabTextColor="@color/white"
            app:tabUnboundedRipple="true">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urban_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celebrity_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pets_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/political_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cartoon_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_tab" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomWidget"
        android:layout_below="@+id/appbar"
        android:layout_marginTop="0dp"
        android:background="@color/black"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/photoGalleryAdapter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@android:color/black">

            </androidx.recyclerview.widget.RecyclerView>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottomWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/red_color_picker"
            app:backgroundTint="@color/red_color_picker">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/btnCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="2dp"
                    android:contentDescription="@string/label_camera"
                    app:srcCompat="@drawable/ic_add_a_photo_white_36dp" />

                <ImageView
                    android:id="@+id/btnGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="2dp"
                    android:layout_toEndOf="@+id/btnCamera"
                    android:contentDescription="@string/label_gallery"
                    app:srcCompat="@drawable/ic_photo_album_white_36dp" />
            </RelativeLayout>


        </com.google.android.material.bottomappbar.BottomAppBar>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 <!--   <RelativeLayout
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        >

    </RelativeLayout> -->
 <!--   <com.google.android.gms.ads.AdView

        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>  -->



</RelativeLayout>